--- a/playbook.yml
+++ b/playbook.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Install MySQL
       package:
-        name: mysql-server
+        name: mysql
         state: present
     
   handlers:
