--- a/playbook.yml
+++ b/playbook.yml
@@ -5,10 +5,14 @@
   hosts: mysql-service
   tasks:
     - name: Install MySQL
-      package:
-        name: mysql server
-        state: present
-    
+      shell: |
+        cd /tmp
+        wget https://dev.mysql.com/get/mysql57-community-release-el7-9.noarch.rpm
+        sudo rpm -ivh mysql57-community-release-el7-9.noarch.rpm
+        sudo yum install mysql-server
+        sudo systemctl start mysqld
+        sudo systemctl status mysqld
+        
   handlers:
     - name: start mysql
       service: name=mysql
