--- a/check_install.yml
+++ b/check_install.yml
@@ -1,9 +1,9 @@
 ---
 
 - hosts: ansiblehost
-  package_facts:
-    manager: "auto"
-    
+  - package_facts:
+     manager: "auto"
+
 - name: "postgresql test result"
   debug: 
     msg: "Postgresql found"
