--- a/check_install.yml
+++ b/check_install.yml
@@ -1,15 +1,10 @@
 ---
 
 - hosts: ansiblehost
-  - package_facts:
-     manager: "auto"
+- name: Gather the rpm package facts
+  package_facts:
+    manager: auto
 
-- name: "postgresql test result"
-  debug: 
-    msg: "Postgresql found"
-  when: "'postgresql' in ansible_facts.packages"
-
-- name: "postgresql test result"
-  debug: 
-    msg: "postgresql NOT found"
-  when: "'postgresql' not in ansible_facts.packages"
+- name: Print the rpm package facts
+  debug:
+    var: ansible_facts.packages
