--- a/check_install.yml
+++ b/check_install.yml
@@ -1,9 +1,9 @@
 ---
-- hosts: ansiblehost
-  - name: Gather the rpm package facts
+hosts: ansiblehost
+- name: Gather the rpm package facts
     package_facts:
       manager: auto
 
-  - name: Print the rpm package facts
+ - name: Print the rpm package facts
     debug:
       var: ansible_facts.packages
