--- a/check_install.yml
+++ b/check_install.yml
@@ -3,9 +3,7 @@
   hosts: ansiblehost
   tasks:
     - name: Gather the rpm package facts
-      package_facts: 
-        manager: auto
-
-    - name: Print the rpm package facts
-      debug:
-        var: ansible_facts.packages
+      yum: 
+        list: mysql
+      register: yum_results
+      debug: yum_results
