--- a/check_install.yml
+++ b/check_install.yml
@@ -2,8 +2,11 @@
 -
   hosts: ansiblehost
   tasks:
-    - name: Gather the rpm package facts
+    - name: save result in var
       yum: 
         list: mysql
       register: yum_results
-      debug: yum_results
+      
+      
+    - name: echo var
+      debug: var=yum_results
