change user to postgres

--- a/install-postgres.yml
+++ b/install-postgres.yml
@@ -26,11 +26,15 @@
       postgresql_user: 
         name: nipap
         password: thispasswortisnotsecure
+      become: true 
+      become_user: postgres
 
     - name: configure postgres db
       postgresql_db: 
         name: nipap
         owner: nipap
+      become: true 
+      become_user: postgres
 
     - name: install postgres extension
       become: yes
