--- a/install-postgres.yml
+++ b/install-postgres.yml
@@ -35,7 +35,8 @@
       become_user: postgres  
 
     - name: create dbuser and db
-      debug: becometest
+      debug: 
+        var: becometest
 
     - name: create dbuser and db
       shell: |
