--- a/install-postgres.yml
+++ b/install-postgres.yml
@@ -23,7 +23,7 @@
       ignore_errors: yes
 
     - name: start postgres
-      shell: service postgresql status
+      shell: sudo service postgresql status
       become: yes
         
     - name: test become
