--- a/install-postgres.yml
+++ b/install-postgres.yml
@@ -22,11 +22,11 @@
       register: pgsql_setup_status
       ignore_errors: yes
 
-    - name: start postgres
-      shell: sudo systemctl start postgresql
-      become: yes
-      become_user: root
-      
+    - name: Start PostgreSQL and enable at boot
+      service: 
+        name: postgresql
+        enabled: yes
+        state: started
         
     - name: test become
       shell: |
